--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Clock</title>
+    <title>lesson 20</title>
     <link rel="stylesheet" href="style/styles.css">
-    <script defer src="JS/script.js"></script>
+    <script defer src="JS/app.js"></script>
 </head>
 <body>
-    <div id="clock"></div>
+    <div class="clock" id="clock"></div>
 </body>
 </html>
