made slider timer

--- a/index.html
+++ b/index.html
@@ -11,18 +11,11 @@
     <section>
         <div class="clock" id="clock"></div>
     </section>
-    <section class="btns-section">
-                <button id="delete-me">delete me</button>
-                <button class="start-timeout">start-timout</button>
-                <button class="stop-timeout">stop-timout</button>
-                <button class="start-interval">start-interval</button>
-                <button class="stop-interval">stop-interval</button>
-            </section>
             <section id="characters-list" class="characters-list"></section>
             <section class="slider">
                 <div class="slider-wrapper">
                     <div class="slide show-slide">
-                        <img src="img/1.jpg" alt="" />
+                        <img src="img/1.jpg" alt="">
                         <div class="slide-desc">
                             <h3>slide 1</h3>
                             <p>
@@ -33,7 +26,7 @@
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="img/2.jpg" alt="" />
+                        <img src="img/2.jpg" alt="">
                         <div class="slide-desc">
                             <h3>slide 2</h3>
                             <p>
@@ -44,7 +37,7 @@
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="img/3.jpg" alt="" />
+                        <img src="img/3.jpg" alt="">
                         <div class="slide-desc">
                             <h3>slide 3</h3>
                             <p>
@@ -55,7 +48,7 @@
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="img/4.jpg" alt="" />
+                        <img src="img/4.jpg" alt="">
                         <div class="slide-desc">
                             <h3>slide 4</h3>
                             <p>
@@ -71,6 +64,5 @@
                     <button class="prev">➜</button>
                     <button class="next">➜</button>
                 </div>
-            </section>
 </body>
 </html>
